@@ -3,6 +3,7 @@ Changes for 2.2.1rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-7263] fixed validation of filter parameters in tr_status.php (Eduard)
 ..F....... [ZBX-7303] removed link to item configuration for discovered items in latest data screen (Eduard)
 ...G...... [ZBX-7289] added server address and port number to "no active checks on server" message (igors)
 ..F....... [ZBX-6920] fixed displaying of soft linked IT services (Eduard)
